:rewind: Revert urdf changes to fix joint states publish error

--- a/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_moveit/config/modes.yaml
+++ b/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_moveit/config/modes.yaml
@@ -8,9 +8,8 @@ groups:
 
 singles:
   gripper:
-    operating_mode: pwm
-    profile_type: time
+    operating_mode: linear_position
+    profile_type: velocity
     profile_velocity: 131
     profile_acceleration: 15
     torque_enable: true
-    pwm_limit: 880
